Fixed "selectized" input height on Safari

--- a/src/webapp/stylesheets/index.styl
+++ b/src/webapp/stylesheets/index.styl
@@ -106,6 +106,9 @@ a.icon
     text-align: center
     margin-bottom: 3px
 
+.selectize-control
+    height: 39px
+
 .github-fork-ribbon a,
 .github-fork-ribbon a:hover
     font-family: 'Lato', sans-serif
